# face_shazam

./: .coveragerc  .gitignore  AUTHORS.rst  LICENSE.txt  README.md  README.rst  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
face_shazam/: eig_utils.py  face_recognition.py  faces_utils.py  image_utils.py  main.py  pca_recognition.py  skeleton.py
tests/: conftest.py  test_skeleton.py
