[metadata]
name = face_shazam
version = 1.0.0
summary = A face recognition library using advanced numerical methods
description-file = README.md
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Image Recognition

[entry_points]
console_scripts =
	face_shazam = face_shazam.main:run

[files]
packages =
    face_shazam

[test]
# py.test options when running `python setup.py test`
addopts = tests

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov face_shazam --cov-report term-missing
    --verbose

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1